# TradingCrew

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  main.py  pyproject.toml  requirements.txt  run_web.sh
commodity_crew/: __init__.py  bridge.py  crew.py  schemas.py  tools.py
docs/: DETAILS.md
reports/: decision_impact_AAPL_20260626T093401Z.json  decision_impact_HINDUNILVR.NS_20260626T093334Z.json  decision_impact_NTNX_20260626T093843Z.json  decision_impact_NTNX_20260626T094006Z.json  decision_impact_NTNX_20260626T094006Z.md  decision_impact_NVDA_20260626T093244Z.json  decision_impact_NVDA_20260626T093357Z.json  decision_impact_RELIANCE.NS_20260626T093330Z.json  decision_impact_RELIANCE.NS_20260626T093456Z.json  decision_impact_RELIANCE.NS_20260626T093645Z.json  decision_impact_RELIANCE.NS_20260626T093645Z.md  sector_bias_20260624T171339Z.json  sector_bias_20260624T171339Z.md
scripts/: audit_run.py  decision_impact_demo.py  headless_kickoff.py  sector_bias_basket.py
tests/: test_backtest_setup.py  test_bridge.py  test_clear_runs.py  test_commodity_crew.py  test_crew_memory.py  test_critic.py  test_e2e_pipeline.py  test_embedder.py  test_embedding_presets.py  test_grid_search.py  test_help_content.py  test_llm_presets.py  test_logging_setup.py  test_m1_action_proposal.py  test_m1_portfolio_state.py  test_m2_cost_model.py  test_m2_simulator.py  test_m3_episodic_memory.py  test_m3_semantic_kb.py  test_m5_risk.py  test_m6_backtest.py  test_m7_allocator.py  test_market_context.py  test_patches_degraded_output.py  test_phase2e_workflow.py  test_reflection.py  (+4 more)
(+70 files in other folders)
